objects/SysException__c.object
<CustomObject>
    <fields>
        <fullName>Class_Origination__c</fullName>
        <description>*Possible* apex class exception thrown from</description>
        <inlineHelpText>*Possible* apex class exception thrown from</inlineHelpText>
        <label>Class Origination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line Number exception occurred</description>
        <inlineHelpText>Line Number exception occurred</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message passed by the Exception</description>
        <inlineHelpText>Message passed by the Exception</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Stack Trace passed by the Exception</description>
        <inlineHelpText>Stack Trace passed by the Exception</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_Origination__c</fullName>
        <description>*Possible* apex trigger exception thrown from</description>
        <inlineHelpText>*Possible* apex trigger exception thrown from</inlineHelpText>
        <label>Trigger Origination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Exception Type</description>
        <inlineHelpText>Exception Type</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>